@@ -1,3 +1,8 @@
+2008-08-04  John W. Eaton  <jwe@octave.org>
+
+	* strings/strtok.m: Include TAB, LF, VT, FF, and CR in default
+	list of delim characters.  Update tests.
+
 2008-07-29  John W. Eaton  <jwe@octave.org>
 
 	* plot/axis.m (__get_tight_lims__): Use strcat instead of [].
